tests/textual/error/fstPairOfPairAndList-wrong-type.uplc
(program 0.0.0 [(force (builtin fstPair)) (con bool True)])
